Changing Node Editor header color also changes wire color #42209

Closed
opened 2014-10-13 19:17:39 +02:00 by Seth L. · 10 comments

System Information
OS X 10.8.5 ATI Radeon HD 4850 512 MB

Blender Version
Broken: 2.72 95182d1

Short description of error
Customizing the Header color for the Node Editor also brings the node wire color with it. The colors of the two elements are linked.
There is a color option called "Wire" which changes the outer wire color, but the only way to change the inner wire color is to change the header color.

Exact steps for others to reproduce the error

  1. Open the Node Editor and make some nodes.
  2. Open Preferences, Themes tab, and go to the Node Editor section.
  3. Change the color for "Header" and see that the inner part of the node wires change too.
**System Information** OS X 10.8.5 ATI Radeon HD 4850 512 MB **Blender Version** Broken: 2.72 95182d1 **Short description of error** Customizing the Header color for the Node Editor also brings the node wire color with it. The colors of the two elements are linked. There is a color option called "Wire" which changes the outer wire color, but the only way to change the inner wire color is to change the header color. **Exact steps for others to reproduce the error** 1. Open the Node Editor and make some nodes. 2. Open Preferences, Themes tab, and go to the Node Editor section. 3. Change the color for "Header" and see that the inner part of the node wires change too.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Julian Eisel self-assigned this 2014-10-14 00:27:33 +02:00
Julian Eisel removed their assignment 2014-10-14 00:30:42 +02:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Oops :D

Oops :D
Lukas Tönne was assigned by Sergey Sharybin 2014-10-14 10:02:57 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Kevin have a patch for this, currently being reviewed by Lukas. Assigning to Lukas so people are not being confused and tries to fix this issue again.

Kevin have a patch for this, currently being reviewed by Lukas. Assigning to Lukas so people are not being confused and tries to fix this issue again.

This issue was referenced by c08e7e1dc0

This issue was referenced by c08e7e1dc0366c485dbea5ef1209f2cdb616fbb3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c08e7e1dc0.

Closed by commit c08e7e1dc0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42209
No description provided.